Add acceptance tests for `fastboot:build`

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "chai": "^2.2.0",
+    "chai-fs": "peterkc/chai-fs",
+    "cpr": "^0.4.2",
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-content-security-policy": "0.4.0",
@@ -33,7 +35,6 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "1.13.8",
     "ember-export-application-global": "^1.0.3",
-    "cpr": "^0.4.2",
     "exists-sync": "0.0.3",
     "fs-extra": "^0.24.0",
     "lodash": "^3.10.1",
